--- a/sdgangularoct/src/app/auth/department/deptlanding/deptlanding.component.scss
+++ b/sdgangularoct/src/app/auth/department/deptlanding/deptlanding.component.scss
@@ -72,3 +72,17 @@ a {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+.modal-backdrop {
+    z-index: 1040 !important;
+}
+
+.modal-content {
+    margin: 2px auto;
+    z-index: 1100 !important;
+}
+
+.modal-backdrop {
+    /* bug fix - no overlay */
+    display: none;
+}
